--- a/LKaifer_BugTracker/Views/Projects/Index.cshtml
+++ b/LKaifer_BugTracker/Views/Projects/Index.cshtml
@@ -29,8 +29,9 @@
                 @Html.DisplayNameFor(model => model.Created)
             </th>
            
-            @*<th>
-        </tr>*@
+            <th>
+                </th>
+        </tr>
 
 
     </thead>
@@ -59,6 +60,14 @@
             </td>
             <td>
                 @item.Created.ToString("d")
+            </td>
+            <td>
+                @if (User.IsInRole("Admin") || (User.IsInRole("Manager")))
+                {
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) <br />
+                    @Html.ActionLink("Assign", "Details", new { id = item.Id })
+                    @*@Html.ActionLink("Delete", "Delete", new { id = item.Id }) <br />*@
+                }
             </td>
             
                 @*<td>
